syntax = "proto3";
package transport;
option go_package = "internal/transport";
import "ports.proto";

service PortService {
  rpc UpdatePort(ports.UpdatePortRequest) returns (ports.UpdatePortResponse) {}
}
