syntax = "proto3";
package ports;
option go_package = "microservice-exercise/internal/data_model";

message Port {
    string name = 1;
    string city = 2;
    string country = 3;
    repeated string alias = 4;
    repeated string regions = 5;
    repeated float coordinates = 6;
    string province = 7;
    string timezone = 8;
    repeated string unlocs = 9;
    string code = 10;
}

message UpdatePortRequest {
    string key = 1;
    Port port = 2;
}

message UpdatePortResponse {}